Corrected valid moves calculations for ranged pieces, knight and king
Separated 'valid moves for a piece' from 'squares the piece protects'.
Solved recursion issue for finding king moves (used to require knowing
the other king's moves, now only requires knowing other king's protected
squares).
Kings can now not move into check. They can still stay in check by the
same piece if the checking piece is a ranged piece. They are also not
forced to move out of check.

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,7 +1,7 @@
-1. Fix valid moves
-	- for ranged pieces
-	- for knight
-	- for king
+1. When a ranged piece attacks the king, allow it to attack all squares behind the king as well.
+2. Add check detection, forced moving.
+3. Add checkmate detection
 
 200. Add pawn promotions
-201. Add check detection
+202. Add en passant pawn capturing
+203. Add stalemate detection - no moves left, >50 boring moves, position repetition.
