Removed checkmate detection, added some check handling. Added method so pinned pieces cannot be moved.
Added tile overlay for when king is in check. Have not implemented
drawing it over the king.
Fixed bug with setting pieces - off-by-one error in setting starting
files.
Fixed bug in accessing protected squares for calculating King
moves.

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,4 +1,5 @@
 1. Add check detection, forced moving.
+	- Fix valid moves so pieces can only move if king is not in check at the end of the turn
 2. Add checkmate detection
 
 200. Add pawn promotions
