Removed functionality that prevents pinned pieces from moving.
Pinned pieces can still move, as long as they maintain the pin. The King
is only in check if the piece moves OUT of the pin.

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,5 +1,6 @@
 1. Add check detection, forced moving.
 	- Fix valid moves so pieces can only move if king is not in check at the end of the turn
+	- Will handle pins, blocking check, capturing checking piece
 2. Add checkmate detection
 
 200. Add pawn promotions
